# KinectToVR

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  KinectToVR.sln  README.md  common_issues.md
Boost6005BugFixApplier/: Boost6005BugFixApplier.cpp  Boost6005BugFixApplier.vcxproj  Boost6005BugFixApplier.vcxproj.filters  stdafx.cpp
Input/: K2VR_Bindings_Oculus_Touch.json  K2VR_Bindings_Vive_Controller.json  K2VR_Bindings_WMR_Trackpad.json  action-manifest.json  kinect_device_left_foot_profile.json  kinect_device_profile.json  kinect_device_right_foot_profile.json  kinect_device_waist_profile.json
KV1CrashHandler/: KV1CrashHandler.cpp  KV1CrashHandler.rc  KV1CrashHandler.vcxproj  KV1CrashHandler.vcxproj.filters  KV1ModHandler.cpp  KV1ModHandler.h  resource.h
KV2CrashHandler/: KV2CrashHandler.cpp  KV2CrashHandler.rc  KV2CrashHandler.vcxproj  KV2CrashHandler.vcxproj.filters  KV2ModHandler.cpp  KV2ModHandler.h  resource.h
KinectV1Process/: KinectJointFilter.h  KinectOrientationFilter.h  KinectToVR.cfg  KinectV1Handler.cpp  KinectV1Handler.h  KinectV1Includes.h  KinectV1Process.aps  KinectV1Process.cpp  KinectV1Process.rc  KinectV1Process.vcxproj  QuaternionMath.cpp  stdafx.h  (+3 more)
driver/: CMakeLists.txt  CMakeSettings.json  driver.vrdrivermanifest
driver/KinectToVR/: CMakeLists.txt
driver/KinectToVR/include/: DriverFactory.hpp  FakeTracker.hpp  ServerDriver.hpp
driver/KinectToVR/src/: DriverFactory.cpp  FakeTracker.cpp  ServerDriver.cpp
driver/KinectToVR/src/kalman/: kalman.hpp
driver/scripts/: Install.bat  SteamVR_ActivateMultipleDrivers.bat  SteamVR_ActivateMultipleDrivers.ps1  SteamVR_FindRuntimePath.ps1  SteamVR_ListAllDrivers.bat  SteamVR_RegisterDrivers.bat  SteamVR_SetDriverVars.bat  SteamVR_UnregisterDrivers.bat  Uninstall.bat
(+172 files in other folders)
